Publish update to CV

--- a/cv/index.html
+++ b/cv/index.html
@@ -77,10 +77,25 @@
 </h2>
 <ul>
 <li>
-<span class="blobs"><code>B</code> <code>†</code> ▩ </span><span class="date"><code>2021/12—2022/03</code></span> <a href="https://github.com/BlockScope/plugins-for-blobs"><strong>Plugins for Blobs</strong></a> ☞ Type check units of measure with SMT solving.
+<span class="updo"><code>U</code> <code>$</code> ▩ </span><span class="date"><code>2022/07—2023/08</code></span>
+<a href="https://www.fpcomplete.com/"><strong>FPComplete</strong></a>.
+☞ Maintain a large Haskell codebase with
+<a href="https://github.com/cabalism/updo#readme"><strong>Updo</strong></a>, tooling I developed for
+generating projects and progressive upgrading.
 </li>
 <li>
-<span class="flaretiming"><code>F</code> <code>†</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> scoring flying competitions ☞ Ask <a href="https://github.com/BlockScope/CIVL-GAP/issues">how</a> how to interpret some <a href="https://github.com/BlockScope/CIVL-GAP#readme">rules</a> typesetting them in LaTeX. Develop a <a href="https://github.com/BlockScope/flare-timing#readme">reference</a> implementation. Publish comparisons of implementations.
+<span class="blobs"><code>B</code> <code>†</code> ▩ </span><span class="date"><code>2021/12—2022/03</code></span>
+<a href="https://github.com/BlockScope/plugins-for-blobs"><strong>Plugins for Blobs</strong></a>
+☞ Type check units of measure with SMT solving.
+</li>
+<li>
+<span class="flaretiming"><code>F</code> <code>†</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span>
+<a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> scoring flying competitions
+☞ Ask <a href="https://github.com/BlockScope/CIVL-GAP/issues">how</a> how to interpret
+some <a href="https://github.com/BlockScope/CIVL-GAP#readme">rules</a> typesetting them
+in LaTeX. Develop
+a <a href="https://github.com/BlockScope/flare-timing#readme">reference</a>
+implementation. Publish comparisons of implementations.
 </li>
 </ul>
 <h2 class="work-section">
@@ -88,22 +103,39 @@
 </h2>
 <ul>
 <li>
-<span class="cit"><code>C</code> <code>$</code> ▩ </span><span class="date"><code>2021/06—2021/10</code></span> <a href="http://www.compositional-it.com"><strong>Compositional</strong></a> ☞ Review slides, demos and labs of <a href="https://safe-stack.github.io/">SAFE Stack</a> training.
+<span class="cit"><code>C</code> <code>$</code> ▩ </span><span class="date"><code>2021/06—2021/10</code></span>
+<a href="http://www.compositional-it.com"><strong>Compositional</strong></a> ☞ Review slides, demos
+and labs of <a href="https://safe-stack.github.io/">SAFE Stack</a> training.
 </li>
 <li>
-<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ Prototype an app for interpreting <a href="https://www.contrastultrasound-modality.com/index.php">contrast-enhanced ultrasound</a>.
+<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span>
+<a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ Prototype an app for interpreting
+<a href="https://www.contrastultrasound-modality.com/index.php">contrast-enhanced
+ultrasound</a>.
 </li>
 <li>
-<span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> monitoring breaches of regulated levels of water take and pollutant discharge ☞ Design a database schema, unmunging and migrating data. Pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a>. Expose web services over relational and time series data. Develop web apps for admins and farmers. Pull data and emit LaTeX to typeset PDF reports.
+<span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span>
+<a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> monitoring breaches of
+regulated levels of water take and pollutant discharge ☞ Design a database
+schema, unmunging and migrating data. Pull and cache metadata from
+<a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a>. Expose web services over relational
+and time series data. Develop web apps for admins and farmers. Pull data and
+emit LaTeX to typeset PDF reports.
 </li>
 <li>
-<span class="tagly"><code>G</code> <code>$</code> ▩ </span><span class="date"><code>2012/07—2012/12</code></span> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a> ☞ Develop server and browser components of a live feed.
+<span class="tagly"><code>G</code> <code>$</code> ▩ </span><span class="date"><code>2012/07—2012/12</code></span>
+<a href="https://angel.co/company/tagly"><strong>Tagly</strong></a> ☞ Develop server and browser
+components of a live feed.
 </li>
 <li>
-<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> Expert F# books ☞ Technical review of editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
+<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span>
+<a href="https://www.apress.com"><strong>Apress</strong></a> Expert F# books ☞ Technical review of
+editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and
+<a href="https://www.apress.com/us/book/9781484207413">4</a>.
 </li>
 <li>
-<span class="travieo"><code>V</code> <code>#</code> ▩ </span><span class="date"><code>2011/08—2015/10</code></span> <a href="http://www.travieo.com"><strong>Travieo</strong></a> ☞ Develop a travel booking website.
+<span class="travieo"><code>V</code> <code>#</code> ▩ </span><span class="date"><code>2011/08—2015/10</code></span>
+<a href="http://www.travieo.com"><strong>Travieo</strong></a> ☞ Develop a travel booking website.
 </li>
 <ul>
 </div>
@@ -113,19 +145,31 @@
 </h2>
 <ul>
 <li>
-<span class="cactus"><code>C</code> <code>#</code> ▩ </span><span class="date"><code>2012/08—2013/02</code></span> <a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope upgrading a production planning system for factory operations.
+<span class="cactus"><code>C</code> <code>#</code> ▩ </span><span class="date"><code>2012/08—2013/02</code></span>
+<a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope upgrading
+a production planning system for factory operations.
 </li>
 <li>
-<span class="croplogic"><code>L</code> <code>$</code> ▩ </span><span class="date"><code>2008/01—2011/08</code></span> <em>CropLogic</em> ☞ Port, tune and test a discrete event simulation crop model with scientists. Ingest field and weather data. Develop a website for growers to setup their soil proﬁle, cultivar, irrigation and fertilizer applications, recommend inputs and predict yields from async model runs.
+<span class="croplogic"><code>L</code> <code>$</code> ▩ </span><span class="date"><code>2008/01—2011/08</code></span>
+<em>CropLogic</em> ☞ Port, tune and test a discrete event simulation crop model with
+scientists. Ingest field and weather data. Develop a website for growers to
+setup their soil proﬁle, cultivar, irrigation and fertilizer applications,
+recommend inputs and predict yields from async model runs.
 </li>
 <li>
-<span class="waimak"><code>D</code> <code>#</code> ▩ </span><span class="date"><code>2007/12—2011/04</code></span> <a href="http://www.waimakariri.govt.nz"><strong>WDC</strong></a> ☞ Develop a website logging public submissions and scheduling hearing time slots.
+<span class="waimak"><code>D</code> <code>#</code> ▩ </span><span class="date"><code>2007/12—2011/04</code></span>
+<a href="http://www.waimakariri.govt.nz"><strong>WDC</strong></a> ☞ Develop a website logging public
+submissions and scheduling hearing time slots.
 </li>
 <li>
-<span class="nutricentre"><code>N</code> <code>$</code> ▩ </span><span class="date"><code>2003/07—2008/05</code></span> <a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a> ☞ Develop an online store.
+<span class="nutricentre"><code>N</code> <code>$</code> ▩ </span><span class="date"><code>2003/07—2008/05</code></span>
+<a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a>
+☞ Develop an online store.
 </li>
 <li>
-<span class="niwa"><code>W</code> <code>#</code> ▩ </span><span class="date"><code>2003/06—2007/07</code></span> <a href="http://www.niwa.co.nz"><strong>NIWA</strong></a> ☞ Develop <a href="http://edenz.niwa.co.nz">EDENZ</a>, a website for publishing environmental time series data.
+<span class="niwa"><code>W</code> <code>#</code> ▩ </span><span class="date"><code>2003/06—2007/07</code></span>
+<a href="http://www.niwa.co.nz"><strong>NIWA</strong></a> ☞ Develop <a href="http://edenz.niwa.co.nz">EDENZ</a>,
+a website for publishing environmental time series data.
 </li>
 </ul>
 </div>
@@ -135,27 +179,35 @@
 </h2>
 <ul>
 <li>
-<span class="aspelle"><code>E</code> <code>$</code> ▩ </span><span class="date"><code>2001/08—2002/09</code></span> <em>Aspelle</em> ☞ Develop authentication and authorization parts of a security product.
+<span class="aspelle"><code>E</code> <code>$</code> ▩ </span><span class="date"><code>2001/08—2002/09</code></span>
+<em>Aspelle</em> ☞ Develop authentication and authorization parts of a security
+product.
 </li>
 <li>
-<span class="obvious"><code>O</code> <code>$</code> ▩ </span><span class="date"><code>1999/10—2001/03</code></span> <em>Obvious Technology</em> ☞ Develop a product for searching video, hitting on annotated key frames.
+<span class="obvious"><code>O</code> <code>$</code> ▩ </span><span class="date"><code>1999/10—2001/03</code></span>
+<em>Obvious Technology</em> ☞ Develop a product for searching video, hitting on
+annotated key frames.
 </li>
 <li>
-<span class="sml"><code>S</code> <code>$</code> ▩ </span><span class="date"><code>1999/07—1999/09</code></span> <a href="http://www.smltd.com"><strong>Software Migrations</strong></a> ☞ Develop a frontend for tools translating mainframe assembly code modules to C.
+<span class="sml"><code>S</code> <code>$</code> ▩ </span><span class="date"><code>1999/07—1999/09</code></span>
+<a href="http://www.smltd.com"><strong>Software Migrations</strong></a> ☞ Develop a frontend for
+tools translating mainframe assembly code modules to C.
 </li>
 <li>
-<span class="trimble"><code>T</code> <code>$</code> ▩ </span><span class="date"><code>1995/02—1999/01</code></span> <a href="http://www.trimble.com"><strong>Trimble</strong></a> ☞ Maintain computer graphics, improving clipping and multithreading.
+<span class="trimble"><code>T</code> <code>$</code> ▩ </span><span class="date"><code>1995/02—1999/01</code></span>
+<a href="http://www.trimble.com"><strong>Trimble</strong></a> ☞ Maintain computer graphics, improving
+clipping and multithreading.
 </div>
 </li>
 <ul>
 <pre>
 <code>
-                                                        <span class="cactus">CC</span>
-                                          <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
-                             <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>
-   <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span><span class="blobs">BB</span>
- <span class="date">~~|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+-~~</span>
- <span class="date"> 1995           2000           2005           2010           2015           2020</span>
+                                                      <span class="cactus">CC</span>
+                                        <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
+                           <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>
+ <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span><span class="blobs">BB</span><span class="updo">UUU</span>
+<span class="date">-|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|-</span>
+<span class="date"> 1995           2000           2005           2010           2015           2020           2025</span>
 </code>
 </pre>
 </article>
@@ -166,7 +218,7 @@
 <div class="col-4">
 <address>
     <strong>Phil de Joux</strong><br />
-    1425 chemin de la Rivière<br />
+    1350 rue Sainte-Olive<br />
     Val-David<br />
     Quebec J0T 2N0<br />
     CANADA<br />
