--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 <div class="align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
 <ul>
-<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
+<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by
+<a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
 <li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
 </ul>
 <p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
@@ -102,7 +103,8 @@
 <div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
 <ul>
-<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
+<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by
+<a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
 <li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
 </ul>
 <p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
@@ -173,7 +175,8 @@
 <div class="align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
 <ul>
-<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
+<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by
+<a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
 <li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
 </ul>
 <p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
@@ -186,7 +189,8 @@
 <div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
 <ul>
-<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
+<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by
+<a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
 <li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
 </ul>
 <p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
