--- a/p/index.html
+++ b/p/index.html
@@ -81,7 +81,8 @@
 </header>
 
     
-    <p>I develop software and climb. Proficient at both, I have some advice that could apply to either activity:</p>
+    <p>I develop software and climb. Proficient at both, I have some advice that could
+apply to either activity:</p>
 <ul>
 <li>Check your knots and always have a backup.</li>
 <li>Gear freaking is a distraction.</li>
@@ -101,7 +102,7 @@ I like pattern matching.</p>
 <div class="col-6">
 <address>
     <strong>Phil de Joux</strong><br />
-    1425 chemin de la Rivière<br />
+    1350 rue Sainte-Olive<br />
     Val-David<br />
     Quebec J0T 2N0<br />
     CANADA<br />
@@ -181,7 +182,8 @@ I like pattern matching.</p>
 </header>
 
     
-    <p>I develop software and climb. Proficient at both, I have some advice that could apply to either activity:</p>
+    <p>I develop software and climb. Proficient at both, I have some advice that could
+apply to either activity:</p>
 <ul>
 <li>Check your knots and always have a backup.</li>
 <li>Gear freaking is a distraction.</li>
@@ -201,7 +203,7 @@ I like pattern matching.</p>
 <div class="col-6">
 <address>
     <strong>Phil de Joux</strong><br />
-    1425 chemin de la Rivière<br />
+    1350 rue Sainte-Olive<br />
     Val-David<br />
     Quebec J0T 2N0<br />
     CANADA<br />
