--- a/projects/fly/index.html
+++ b/projects/fly/index.html
@@ -81,16 +81,24 @@
 </header>
 
     
-    <p>I’ve been a competition pilot, racing other hang glider pilots around unseen turnpoints in the sky.</p>
-<p>With data points coming in every second for upwards of a hundred pilots and geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern the sport. They make the rules and provide FS, the official program for scoring.</p>
-<p>The paragliding world cup has its own set of rules but these are very close to those of FAI-CIVL. They use another program for scoring, CompCheck.</p>
-<p>Both FS and CompCheck are closed source. Many of those involved with FS want to make it open source but this has not happened yet.</p>
+    <p>I’ve been a competition pilot, racing other hang glider pilots around
+unseen turnpoints in the sky.</p>
+<p>With data points coming in every second for upwards of a hundred pilots and
+geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern
+the sport. They make the rules and provide FS, the official program for
+scoring.</p>
+<p>The paragliding world cup has its own set of rules but these are very close to
+those of FAI-CIVL. They use another program for scoring, CompCheck.</p>
+<p>Both FS and CompCheck are closed source. Many of those involved with FS want to
+make it open source but this has not happened yet.</p>
 <p>I help maintain FS and started flare-timing and CIVL-GAP.</p>
 <ul>
 <li><a href="http://www.flaretiming.com"><strong>flare-timing</strong></a><br />
-A reference implementation of the rules as a suite of command line apps, one for each step in the process of scoring.</li>
+A reference implementation of the rules as a suite of command line apps,
+one for each step in the process of scoring.</li>
 <li><a href="https://github.com/BlockScope/CIVL-GAP"><strong>CIVL-GAP</strong></a><br />
-An upstream version of rules marked up in LaTeX with questions, corrections, clarifying appendices and suggested changes.</li>
+An upstream version of rules marked up in LaTeX with questions,
+corrections, clarifying appendices and suggested changes.</li>
 </ul>
 <p>Packages from flare-timing released on hackage.</p>
 <ul>
@@ -155,16 +163,24 @@ An upstream version of rules marked up in LaTeX with questions, corrections, cla
 </header>
 
     
-    <p>I’ve been a competition pilot, racing other hang glider pilots around unseen turnpoints in the sky.</p>
-<p>With data points coming in every second for upwards of a hundred pilots and geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern the sport. They make the rules and provide FS, the official program for scoring.</p>
-<p>The paragliding world cup has its own set of rules but these are very close to those of FAI-CIVL. They use another program for scoring, CompCheck.</p>
-<p>Both FS and CompCheck are closed source. Many of those involved with FS want to make it open source but this has not happened yet.</p>
+    <p>I’ve been a competition pilot, racing other hang glider pilots around
+unseen turnpoints in the sky.</p>
+<p>With data points coming in every second for upwards of a hundred pilots and
+geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern
+the sport. They make the rules and provide FS, the official program for
+scoring.</p>
+<p>The paragliding world cup has its own set of rules but these are very close to
+those of FAI-CIVL. They use another program for scoring, CompCheck.</p>
+<p>Both FS and CompCheck are closed source. Many of those involved with FS want to
+make it open source but this has not happened yet.</p>
 <p>I help maintain FS and started flare-timing and CIVL-GAP.</p>
 <ul>
 <li><a href="http://www.flaretiming.com"><strong>flare-timing</strong></a><br />
-A reference implementation of the rules as a suite of command line apps, one for each step in the process of scoring.</li>
+A reference implementation of the rules as a suite of command line apps,
+one for each step in the process of scoring.</li>
 <li><a href="https://github.com/BlockScope/CIVL-GAP"><strong>CIVL-GAP</strong></a><br />
-An upstream version of rules marked up in LaTeX with questions, corrections, clarifying appendices and suggested changes.</li>
+An upstream version of rules marked up in LaTeX with questions,
+corrections, clarifying appendices and suggested changes.</li>
 </ul>
 <p>Packages from flare-timing released on hackage.</p>
 <ul>
