--- a/projects/geodetics/index.html
+++ b/projects/geodetics/index.html
@@ -81,7 +81,9 @@
 </header>
 
     
-    <p>I’ve coded up solutions to the direct and indirect problems of geodetics in Haskell, F#, Unison and Koka and in so doing have been able to find problems with some of these compilers.</p>
+    <p>I’ve coded up solutions to the direct and indirect problems of geodetics in
+Haskell, F#, Unison and Koka and in so doing have been able to find problems
+with some of these compilers.</p>
 <h2 id="the-direct-or-forward-geodetics-problem">The Direct or Forward Geodetics Problem</h2>
 <ul>
 <li>{x} The departure point on the ellipsoid.</li>
@@ -105,7 +107,9 @@
 <li>{α₂} The azimuth at the arrival point.</li>
 </ul>
 <h2 id="geodetics-solutions">Geodetics Solutions</h2>
-<p>At the <code>github</code>/<a href="https://github.com/flight-earth">flight-earth</a> organisation you’ll find a set of solutions to geodesy problems in various programming languages.</p>
+<p>At the <code>github</code>/<a href="https://github.com/flight-earth">flight-earth</a> organisation
+you’ll find a set of solutions to geodesy problems in various programming
+languages.</p>
 <ul>
 <li><code>flight-earth</code>/<a href="https://github.com/flight-earth/meridian-arc">meridian-arc</a> for F#. Also published on nuget as <a href="https://www.nuget.org/packages/meridian-arc/">meridian-arc</a>. Interestingly, the math doesn’t work quite the same on all platforms (Windows, Mac and Ubuntu) I tested with.</li>
 <li><code>glide-angle</code>/<a href="https://github.com/GlideAngle/flare-timing/tree/main/lang-haskell/earth">flight-earth</a> for Haskell. I’m waiting on a fix for the <code>uom-plugin</code> dependency to land before I move the package between organisations, from <code>glide-angle</code> to <code>flight-earth</code>.</li>
@@ -115,9 +119,15 @@
 <h2 id="issues-found-incidentally">Issues Found Incidentally</h2>
 <ul>
 <li><code>koka-lang</code><a href="http://koka-lang.org/"><strong>/koka</strong></a><br />
-Found <a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">issues</a> compiling <code>flight-earth</code><a href="https://github.com/flight-earth/coriolis-effect"><strong>/coriolis-effect</strong></a>.</li>
+Found
+<a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">issues</a>
+compiling
+<code>flight-earth</code><a href="https://github.com/flight-earth/coriolis-effect"><strong>/coriolis-effect</strong></a>.</li>
 <li><code>unisonweb</code><a href="https://www.unisonweb.org/"><strong>/unison</strong></a><br />
-Found <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">issues</a> compiling <code>flight-earth</code><a href="https://github.com/flight-earth/flat-earth"><strong>/flat-earth</strong></a>.</li>
+Found
+<a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">issues</a>
+compiling
+<code>flight-earth</code><a href="https://github.com/flight-earth/flat-earth"><strong>/flat-earth</strong></a>.</li>
 </ul>
 </article>
 
@@ -174,7 +184,9 @@ Found <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeas
 </header>
 
     
-    <p>I’ve coded up solutions to the direct and indirect problems of geodetics in Haskell, F#, Unison and Koka and in so doing have been able to find problems with some of these compilers.</p>
+    <p>I’ve coded up solutions to the direct and indirect problems of geodetics in
+Haskell, F#, Unison and Koka and in so doing have been able to find problems
+with some of these compilers.</p>
 <h2 id="the-direct-or-forward-geodetics-problem">The Direct or Forward Geodetics Problem</h2>
 <ul>
 <li>{x} The departure point on the ellipsoid.</li>
@@ -198,7 +210,9 @@ Found <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeas
 <li>{α₂} The azimuth at the arrival point.</li>
 </ul>
 <h2 id="geodetics-solutions">Geodetics Solutions</h2>
-<p>At the <code>github</code>/<a href="https://github.com/flight-earth">flight-earth</a> organisation you’ll find a set of solutions to geodesy problems in various programming languages.</p>
+<p>At the <code>github</code>/<a href="https://github.com/flight-earth">flight-earth</a> organisation
+you’ll find a set of solutions to geodesy problems in various programming
+languages.</p>
 <ul>
 <li><code>flight-earth</code>/<a href="https://github.com/flight-earth/meridian-arc">meridian-arc</a> for F#. Also published on nuget as <a href="https://www.nuget.org/packages/meridian-arc/">meridian-arc</a>. Interestingly, the math doesn’t work quite the same on all platforms (Windows, Mac and Ubuntu) I tested with.</li>
 <li><code>glide-angle</code>/<a href="https://github.com/GlideAngle/flare-timing/tree/main/lang-haskell/earth">flight-earth</a> for Haskell. I’m waiting on a fix for the <code>uom-plugin</code> dependency to land before I move the package between organisations, from <code>glide-angle</code> to <code>flight-earth</code>.</li>
@@ -208,9 +222,15 @@ Found <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeas
 <h2 id="issues-found-incidentally">Issues Found Incidentally</h2>
 <ul>
 <li><code>koka-lang</code><a href="http://koka-lang.org/"><strong>/koka</strong></a><br />
-Found <a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">issues</a> compiling <code>flight-earth</code><a href="https://github.com/flight-earth/coriolis-effect"><strong>/coriolis-effect</strong></a>.</li>
+Found
+<a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">issues</a>
+compiling
+<code>flight-earth</code><a href="https://github.com/flight-earth/coriolis-effect"><strong>/coriolis-effect</strong></a>.</li>
 <li><code>unisonweb</code><a href="https://www.unisonweb.org/"><strong>/unison</strong></a><br />
-Found <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">issues</a> compiling <code>flight-earth</code><a href="https://github.com/flight-earth/flat-earth"><strong>/flat-earth</strong></a>.</li>
+Found
+<a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">issues</a>
+compiling
+<code>flight-earth</code><a href="https://github.com/flight-earth/flat-earth"><strong>/flat-earth</strong></a>.</li>
 </ul>
 </article>
 
