--- a/projects/tooling/index.html
+++ b/projects/tooling/index.html
@@ -85,28 +85,45 @@
 <h4 id="build-tools">Build Tools</h4>
 <ul>
 <li><code>cabalism</code><a href="http://hackage.haskell.org/package/hpack-dhall"><strong>/hpack-dhall</strong></a><br />
-I started contributing and ended up <a href="https://github.com/cabalism/hpack-dhall/issues/3">owner and maintainer</a> of this way to setup Haskell projects.</li>
+I started contributing and ended up
+<a href="https://github.com/cabalism/hpack-dhall/issues/3">owner and maintainer</a> of
+this way to setup Haskell projects.</li>
 <li><code>judah</code><a href="https://github.com/judah/pier"><strong>/pier</strong></a><br />
-I added <a href="https://github.com/judah/pier/issues/50">test-suite</a> running to this experimental way of building Haskell projects.</li>
+I added <a href="https://github.com/judah/pier/issues/50">test-suite</a> running to this
+experimental way of building Haskell projects.</li>
 <li><code>tweag</code><a href="https://haskell.build/"><strong>/rules_haskell</strong></a><br />
-I helped <a href="https://github.com/tweag/rules_haskell/commits?author=philderbeast">document</a> how to build Haskell fast with Google Bazel and rules_haskell.</li>
+I helped
+<a href="https://github.com/tweag/rules_haskell/commits?author=philderbeast">document</a>
+how to build Haskell fast with Google Bazel and rules_haskell.</li>
 <li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><br />
-<a href="https://github.com/commercialhaskell/stack/pull/4392/files">Document</a> how to suppress the <code>-nopie</code> warnings on macOS.</li>
+<a href="https://github.com/commercialhaskell/stack/pull/4392/files">Document</a> how to
+suppress the <code>-nopie</code> warnings on macOS.</li>
 <li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><br />
-Raised <a href="https://github.com/haskell/cabal/issues?q=is%3Aissue+author%3Aphilderbeast">issues</a> and supplied <a href="https://github.com/haskell/cabal/pulls?q=author%3Aphilderbeast">pull requests</a>, such as filling gaps in the documentation for commands like <code>cabal install all:exes</code> and <code>cabal list-bin</code>.</li>
+Raised
+<a href="https://github.com/haskell/cabal/issues?q=is%3Aissue+author%3Aphilderbeast">issues</a>
+and supplied <a href="https://github.com/haskell/cabal/pulls?q=author%3Aphilderbeast">pull requests</a>, such as filling gaps in the documentation for commands like
+<code>cabal install all:exes</code> and <code>cabal list-bin</code>.</li>
 <li><code>nmattia</code><a href="https://github.com/nmattia/snack/commits?author=philderbeast"><strong>/snack</strong></a><br />
 An incremental build tool for Haskell projects.</li>
 </ul>
 <h4 id="packages-and-dependencies">Packages and Dependencies</h4>
 <ul>
 <li><code>fsprojects</code><a href="https://fsprojects.github.io/Paket/"><strong>/paket</strong></a><br />
-I helped document how to convert an existing solution to use paket, <a href="https://github.com/fsprojects/Paket/commit/3db8c5b8701adf345c8cf4c1b3cfcb8d4bc11fca">explaining</a> some assumptions in the way the project files need to be organized on disk. This is now a <a href="https://fsprojects.github.io/Paket/convert-from-nuget-tutorial.html">tutorial</a>.</li>
+I helped document how to convert an existing solution to use paket,
+<a href="https://github.com/fsprojects/Paket/commit/3db8c5b8701adf345c8cf4c1b3cfcb8d4bc11fca">explaining</a>
+some assumptions in the way the project files need to be organized on disk.
+This is now
+a <a href="https://fsprojects.github.io/Paket/convert-from-nuget-tutorial.html">tutorial</a>.</li>
 <li><code>NixOS</code><a href="https://github.com/NixOS/cabal2nix"><strong>/cabal2nix</strong></a><br />
-I made a <a href="https://github.com/NixOS/cabal2nix/pull/375">pull request</a> adding hpack-dhall packages that we agreed should not be merged as cabal2nix should focus on <code>.cabal</code> files and drop support for other package file formats.</li>
+I made a <a href="https://github.com/NixOS/cabal2nix/pull/375">pull request</a> adding
+hpack-dhall packages that we agreed should not be merged as cabal2nix should
+focus on <code>.cabal</code> files and drop support for other package file formats.</li>
 <li><code>typeable</code><a href="https://github.com/typeable/stackage2nix"><strong>/stackage2nix</strong></a><br />
-<a href="https://github.com/typeable/stackage2nix/commit/9bf94e1ded1d52feddbdbd560ecd4f9a70aa6c34">Redirect</a> stale links to <code>all-cabal-hashes</code> and <code>lts-haskell</code>.</li>
+<a href="https://github.com/typeable/stackage2nix/commit/9bf94e1ded1d52feddbdbd560ecd4f9a70aa6c34">Redirect</a>
+stale links to <code>all-cabal-hashes</code> and <code>lts-haskell</code>.</li>
 <li><code>input-output-hk</code><a href="https://github.com/input-output-hk/stack2nix"><strong>/stack2nix</strong></a><br />
-<a href="https://github.com/input-output-hk/stack2nix/commit/e01483c14ec288eeeef586c9aa31c737042bda55">Parse</a> the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
+<a href="https://github.com/input-output-hk/stack2nix/commit/e01483c14ec288eeeef586c9aa31c737042bda55">Parse</a>
+the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
 </ul>
 </article>
 
@@ -167,28 +184,45 @@ I made a <a href="https://github.com/NixOS/cabal2nix/pull/375">pull request</a> 
 <h4 id="build-tools">Build Tools</h4>
 <ul>
 <li><code>cabalism</code><a href="http://hackage.haskell.org/package/hpack-dhall"><strong>/hpack-dhall</strong></a><br />
-I started contributing and ended up <a href="https://github.com/cabalism/hpack-dhall/issues/3">owner and maintainer</a> of this way to setup Haskell projects.</li>
+I started contributing and ended up
+<a href="https://github.com/cabalism/hpack-dhall/issues/3">owner and maintainer</a> of
+this way to setup Haskell projects.</li>
 <li><code>judah</code><a href="https://github.com/judah/pier"><strong>/pier</strong></a><br />
-I added <a href="https://github.com/judah/pier/issues/50">test-suite</a> running to this experimental way of building Haskell projects.</li>
+I added <a href="https://github.com/judah/pier/issues/50">test-suite</a> running to this
+experimental way of building Haskell projects.</li>
 <li><code>tweag</code><a href="https://haskell.build/"><strong>/rules_haskell</strong></a><br />
-I helped <a href="https://github.com/tweag/rules_haskell/commits?author=philderbeast">document</a> how to build Haskell fast with Google Bazel and rules_haskell.</li>
+I helped
+<a href="https://github.com/tweag/rules_haskell/commits?author=philderbeast">document</a>
+how to build Haskell fast with Google Bazel and rules_haskell.</li>
 <li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><br />
-<a href="https://github.com/commercialhaskell/stack/pull/4392/files">Document</a> how to suppress the <code>-nopie</code> warnings on macOS.</li>
+<a href="https://github.com/commercialhaskell/stack/pull/4392/files">Document</a> how to
+suppress the <code>-nopie</code> warnings on macOS.</li>
 <li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><br />
-Raised <a href="https://github.com/haskell/cabal/issues?q=is%3Aissue+author%3Aphilderbeast">issues</a> and supplied <a href="https://github.com/haskell/cabal/pulls?q=author%3Aphilderbeast">pull requests</a>, such as filling gaps in the documentation for commands like <code>cabal install all:exes</code> and <code>cabal list-bin</code>.</li>
+Raised
+<a href="https://github.com/haskell/cabal/issues?q=is%3Aissue+author%3Aphilderbeast">issues</a>
+and supplied <a href="https://github.com/haskell/cabal/pulls?q=author%3Aphilderbeast">pull requests</a>, such as filling gaps in the documentation for commands like
+<code>cabal install all:exes</code> and <code>cabal list-bin</code>.</li>
 <li><code>nmattia</code><a href="https://github.com/nmattia/snack/commits?author=philderbeast"><strong>/snack</strong></a><br />
 An incremental build tool for Haskell projects.</li>
 </ul>
 <h4 id="packages-and-dependencies">Packages and Dependencies</h4>
 <ul>
 <li><code>fsprojects</code><a href="https://fsprojects.github.io/Paket/"><strong>/paket</strong></a><br />
-I helped document how to convert an existing solution to use paket, <a href="https://github.com/fsprojects/Paket/commit/3db8c5b8701adf345c8cf4c1b3cfcb8d4bc11fca">explaining</a> some assumptions in the way the project files need to be organized on disk. This is now a <a href="https://fsprojects.github.io/Paket/convert-from-nuget-tutorial.html">tutorial</a>.</li>
+I helped document how to convert an existing solution to use paket,
+<a href="https://github.com/fsprojects/Paket/commit/3db8c5b8701adf345c8cf4c1b3cfcb8d4bc11fca">explaining</a>
+some assumptions in the way the project files need to be organized on disk.
+This is now
+a <a href="https://fsprojects.github.io/Paket/convert-from-nuget-tutorial.html">tutorial</a>.</li>
 <li><code>NixOS</code><a href="https://github.com/NixOS/cabal2nix"><strong>/cabal2nix</strong></a><br />
-I made a <a href="https://github.com/NixOS/cabal2nix/pull/375">pull request</a> adding hpack-dhall packages that we agreed should not be merged as cabal2nix should focus on <code>.cabal</code> files and drop support for other package file formats.</li>
+I made a <a href="https://github.com/NixOS/cabal2nix/pull/375">pull request</a> adding
+hpack-dhall packages that we agreed should not be merged as cabal2nix should
+focus on <code>.cabal</code> files and drop support for other package file formats.</li>
 <li><code>typeable</code><a href="https://github.com/typeable/stackage2nix"><strong>/stackage2nix</strong></a><br />
-<a href="https://github.com/typeable/stackage2nix/commit/9bf94e1ded1d52feddbdbd560ecd4f9a70aa6c34">Redirect</a> stale links to <code>all-cabal-hashes</code> and <code>lts-haskell</code>.</li>
+<a href="https://github.com/typeable/stackage2nix/commit/9bf94e1ded1d52feddbdbd560ecd4f9a70aa6c34">Redirect</a>
+stale links to <code>all-cabal-hashes</code> and <code>lts-haskell</code>.</li>
 <li><code>input-output-hk</code><a href="https://github.com/input-output-hk/stack2nix"><strong>/stack2nix</strong></a><br />
-<a href="https://github.com/input-output-hk/stack2nix/commit/e01483c14ec288eeeef586c9aa31c737042bda55">Parse</a> the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
+<a href="https://github.com/input-output-hk/stack2nix/commit/e01483c14ec288eeeef586c9aa31c737042bda55">Parse</a>
+the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
 </ul>
 </article>
 
