--- a/projects/index.html
+++ b/projects/index.html
@@ -81,14 +81,31 @@
 </header>
 
     
-    <p>I donate time to open source and am setup to <a href="https://github.com/sponsors/philderbeast">receive donations</a> (not that anybody has).</p>
-<p>I’m pushing for units of measure and functional programming. F# has units built in. I have contributed to adding units to Haskell via type checker plugins.</p>
-<p>To try out new and interesting programming languages, I’ve been adding geodetic library packages for F#, Haskell, Unison and Koka, and incidentally uncovering problems with newer compilers.</p>
-<p>I’ll take the time to report issues and contribute patches to compilers and tools I use. I’ve reported issues with <a href="https://gitlab.haskell.org/ghc/ghc/-/issues?scope=all&amp;state=all&amp;author_username=philderbeast">ghc</a>, <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">unison</a> and <a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">koka</a>. I first contributed to GHC when they were using phrabricator. It was quite the process to get started. Much easier now. Here’s my first contribution to GHC:</p>
+    <p>I donate time to open source and am setup to <a href="https://github.com/sponsors/philderbeast">receive
+donations</a> (not that anybody has).</p>
+<p>I’m pushing for units of measure and functional programming. F# has units built
+in. I have contributed to adding units to Haskell via type checker plugins.</p>
+<p>To try out new and interesting programming languages, I’ve been adding geodetic
+library packages for F#, Haskell, Unison and Koka, and incidentally uncovering
+problems with newer compilers.</p>
+<p>I’ll take the time to report issues and contribute patches to compilers and
+tools I use. I’ve reported issues with
+<a href="https://gitlab.haskell.org/ghc/ghc/-/issues?scope=all&amp;state=all&amp;author_username=philderbeast">ghc</a>,
+<a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">unison</a> and
+<a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">koka</a>. I
+first contributed to GHC when they were using phrabricator. It was quite the
+process to get started. Much easier now. Here’s my first contribution to GHC:</p>
 <ul>
-<li>For the newcomer labelled bug <a href="https://gitlab.haskell.org/ghc/ghc/issues/12441">12441</a>, fix pretty printing for <a href="https://github.com/ghc/ghc/commit/33140f41b931fb81bf2e5aa28603fe757bb3779d">explicit quantifiers</a>.</li>
+<li>For the newcomer labelled bug
+<a href="https://gitlab.haskell.org/ghc/ghc/issues/12441">12441</a>, fix pretty printing
+for <a href="https://github.com/ghc/ghc/commit/33140f41b931fb81bf2e5aa28603fe757bb3779d">explicit
+quantifiers</a>.</li>
 </ul>
-<p>I’ll use front end frameworks (especially those that change the paradigm or bring more type checking) to redo a portion of nose cone and get a feel for how they work in practice. At the <code>github</code>/<a href="https://github.com/NoseCone">nose-cone</a> organisation you’ll find rescript, svelte, feliz and sutil redos of the original reflex-frp single page app user interface. Each has an accompanying demo.</p>
+<p>I’ll use front end frameworks (especially those that change the paradigm or
+bring more type checking) to redo a portion of nose cone and get a feel for how
+they work in practice. At the <code>github</code>/<a href="https://github.com/NoseCone">nose-cone</a>
+organisation you’ll find rescript, svelte, feliz and sutil redos of the original
+reflex-frp single page app user interface. Each has an accompanying demo.</p>
 </article>
 
         </div>
@@ -144,14 +161,31 @@
 </header>
 
     
-    <p>I donate time to open source and am setup to <a href="https://github.com/sponsors/philderbeast">receive donations</a> (not that anybody has).</p>
-<p>I’m pushing for units of measure and functional programming. F# has units built in. I have contributed to adding units to Haskell via type checker plugins.</p>
-<p>To try out new and interesting programming languages, I’ve been adding geodetic library packages for F#, Haskell, Unison and Koka, and incidentally uncovering problems with newer compilers.</p>
-<p>I’ll take the time to report issues and contribute patches to compilers and tools I use. I’ve reported issues with <a href="https://gitlab.haskell.org/ghc/ghc/-/issues?scope=all&amp;state=all&amp;author_username=philderbeast">ghc</a>, <a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">unison</a> and <a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">koka</a>. I first contributed to GHC when they were using phrabricator. It was quite the process to get started. Much easier now. Here’s my first contribution to GHC:</p>
+    <p>I donate time to open source and am setup to <a href="https://github.com/sponsors/philderbeast">receive
+donations</a> (not that anybody has).</p>
+<p>I’m pushing for units of measure and functional programming. F# has units built
+in. I have contributed to adding units to Haskell via type checker plugins.</p>
+<p>To try out new and interesting programming languages, I’ve been adding geodetic
+library packages for F#, Haskell, Unison and Koka, and incidentally uncovering
+problems with newer compilers.</p>
+<p>I’ll take the time to report issues and contribute patches to compilers and
+tools I use. I’ve reported issues with
+<a href="https://gitlab.haskell.org/ghc/ghc/-/issues?scope=all&amp;state=all&amp;author_username=philderbeast">ghc</a>,
+<a href="https://github.com/unisonweb/unison/issues/created_by/philderbeast">unison</a> and
+<a href="https://github.com/koka-lang/koka/issues/created_by/philderbeast">koka</a>. I
+first contributed to GHC when they were using phrabricator. It was quite the
+process to get started. Much easier now. Here’s my first contribution to GHC:</p>
 <ul>
-<li>For the newcomer labelled bug <a href="https://gitlab.haskell.org/ghc/ghc/issues/12441">12441</a>, fix pretty printing for <a href="https://github.com/ghc/ghc/commit/33140f41b931fb81bf2e5aa28603fe757bb3779d">explicit quantifiers</a>.</li>
+<li>For the newcomer labelled bug
+<a href="https://gitlab.haskell.org/ghc/ghc/issues/12441">12441</a>, fix pretty printing
+for <a href="https://github.com/ghc/ghc/commit/33140f41b931fb81bf2e5aa28603fe757bb3779d">explicit
+quantifiers</a>.</li>
 </ul>
-<p>I’ll use front end frameworks (especially those that change the paradigm or bring more type checking) to redo a portion of nose cone and get a feel for how they work in practice. At the <code>github</code>/<a href="https://github.com/NoseCone">nose-cone</a> organisation you’ll find rescript, svelte, feliz and sutil redos of the original reflex-frp single page app user interface. Each has an accompanying demo.</p>
+<p>I’ll use front end frameworks (especially those that change the paradigm or
+bring more type checking) to redo a portion of nose cone and get a feel for how
+they work in practice. At the <code>github</code>/<a href="https://github.com/NoseCone">nose-cone</a>
+organisation you’ll find rescript, svelte, feliz and sutil redos of the original
+reflex-frp single page app user interface. Each has an accompanying demo.</p>
 </article>
 
                 </div>
